--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -50,7 +50,7 @@
 
     <h2>Urheberrecht:</h2>
 
-    Die Inhalte und Werke auf diesen Seiten, die von den Betreibern der Seite erstellt wurden, unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors oder Erstellers.
+    Die Inhalte und Werke auf diesen Seiten, die von den Betreibern der Seite erstellt wurden, unterliegen dem schweizer Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors oder Erstellers.
 
     <h2>Datenschutz:</h2>
 
