--- a/html/Information.html
+++ b/html/Information.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 </header>
-<p><button id="informationButton">Information</button></p>
+<p><button id="informationButton" disabled>Information</button></p>
 <div id="boxInfo" class="box" style="overflow:auto;">
     <div class="boxText">
         <h2>Allgemein</h2>
