--- a/html/Vergleich.html
+++ b/html/Vergleich.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 </header>
-<p><button id="informationButton">Vergleich</button></p>
+<p><button id="informationButton" disabled>Vergleich</button></p>
 <div id="boxVergleich" class="box" style="overflow:auto;">
     <div class="boxText">
         <div class="container">
