--- a/html/Video.html
+++ b/html/Video.html
@@ -27,7 +27,7 @@
     </nav>
 </header>
 
-    <p><button id="videoButton">VIDEO</button></p>
+    <p><button id="videoButton" disabled>VIDEO</button></p>
     <video src="../media/M152_LB3_1_Vychytil_Alexandra.mp4" controls></video>
 
 
