--- a/html/AGB.html
+++ b/html/AGB.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/General.css">
     <link rel="stylesheet" href="../css/BurgerMenu.css">
@@ -29,6 +30,15 @@
 <div class="box" style="overflow:auto;">
     <div class="boxText">
         <h1>AGB</h1>
+        <ol class="boxText">
+            <li class="boxText" >Die auf der Coca-Cola-Website verwendeten Bilder sind Eigentum von Coca-Cola und werden nur für schulische Zwecke verwendet.</li>
+            <li class="boxText">Coca-Cola haftet nicht für Urheberrechtsverletzungen durch Nutzer der Website.</li>
+            <li class="boxText">Der Kauf von Coca-Cola-Produkten auf der Website ist endgültig und es erfolgt kein Umtausch oder Rückgabe.</li>
+            <li class="boxText">Rabatte und Angebote, die auf der Website angezeigt werden, sind nicht garantiert und können jederzeit ohne Vorankündigung geändert oder entfernt werden.</li>
+            <li class="boxText">Coca-Cola haftet nicht für die Privatsphäre der Nutzer der Website und empfiehlt allen Nutzern.</li>
+            <li class="boxText">Mit der Nutzung der Coca-Cola-Website erklären Sie sich mit diesen Allgemeinen Geschäftsbedingungen einverstanden und verpflichten sich, diese einzuhalten.</li>
+            <li class="boxText">Wir behalten uns das Recht vor, diese Allgemeinen Geschäftsbedingungen jederzeit zu ändern und zu aktualisieren. Es liegt in der Verantwortung des Nutzers, sich über die aktuellen Bedingungen auf dem Laufenden zu halten.</li>
+        </ol>
     </div>
 </div>
 <footer>
