--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/General.css">
-    <link rel="stylesheet" href="../css/BurgerMenu.css">
+    <meta charset="UTF-8">
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" rel="stylesheet">
+    <link href="../css/General.css" rel="stylesheet">
+    <link href="../css/BurgerMenu.css" rel="stylesheet">
     <title>Coca-Cola-Impressum</title>
 </head>
 <body>
 <header class="headerMenu">
     <div class="logo">
-        <img src="../media/coca_cola_logo.png" class="center">
+        <a href="Main.html"> <img class="center" src="../media/coca_cola_logo.png" alt="coca_cola_logo"></a>
     </div>
-    <nav role="navigation">
+    <nav>
         <div id="menuToggle">
-            <input type="checkbox" />
+            <input type="checkbox"/>
             <span></span>
             <span></span>
             <span></span>
             <ul id="menu">
-                <a href="../html/Main.html"><li>Main</li></a>
-                <a href="../html/Video.html"><li>Video</li></a>
-                <a href="../html/Information.html"><li>Information</li></a>
-                <a href="../html/Vergleich.html"><li>Vergleich</li></a>
+                <li><a href="Main.html">Main</a></li>
+                <li><a href="Video.html">Video</a></li>
+                <li><a href="Information.html">Information</a></li>
+                <li><a href="Vergleich.html">Vergleich</a></li>
             </ul>
         </div>
     </nav>
 </header>
 <div class="box" style="overflow:auto;">
     <div class="boxText">
-    <h1>Impressum</h1>
+        <h1>Impressum</h1>
 
-    Kontakt Informationen:
+        <h2>Kontakt Informationen:<h2>
+        <ul>
+            <li class="boxText"> Alexandra Vychytil</li>
+            <li class="boxText"> Jonentalstrasse 14</li>
+            <li class="boxText"> 079 000 00 00</li>
+            <li class="boxText">email@gmail.com</li>
+        </ul>
+        <h2>Verantwortlich für den Inhalt:</h2>
 
-    Alexandra Vychytil
-    Jonentalstrasse 14
-    079 000 00 00
-    email@gmail.com
+        Alexandra Vychytil
 
-    <h2>Verantwortlich für den Inhalt:</h2>
+        <h2>Haftungsausschluss:</h2>
 
-    Alexandra Vychytil
+        Der Inhalt unserer Website wurde sorgfältig erstellt und nach bestem Wissen. Wir können jedoch keine Haftung für
+        die Aktualität, Vollständigkeit oder Richtigkeit der Seiten übernehmen.
 
-    <h2>Haftungsausschluss:</h2>
+        Unsere Website enthält Links zu externen Websites. Da wir den Inhalt dieser Websites Dritter nicht kontrollieren
+        können, übernehmen wir keine Haftung dafür. Die Verantwortung für die Inhalte der verlinkten Seiten trägt immer
+        der Anbieter oder Betreiber der Seiten.
 
-    Der Inhalt unserer Website wurde sorgfältig erstellt und nach bestem Wissen. Wir können jedoch keine Haftung für die Aktualität, Vollständigkeit oder Richtigkeit der Seiten übernehmen.
+        <h2>Urheberrecht:</h2>
 
-    Unsere Website enthält Links zu externen Websites. Da wir den Inhalt dieser Websites Dritter nicht kontrollieren können, übernehmen wir keine Haftung dafür. Die Verantwortung für die Inhalte der verlinkten Seiten trägt immer der Anbieter oder Betreiber der Seiten.
+        Die Inhalte und Werke auf diesen Seiten, die von den Betreibern der Seite erstellt wurden, unterliegen dem
+        schweizer Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der
+        Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors oder Erstellers.
 
-    <h2>Urheberrecht:</h2>
-
-    Die Inhalte und Werke auf diesen Seiten, die von den Betreibern der Seite erstellt wurden, unterliegen dem schweizer Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors oder Erstellers.
-
-    <h2>Datenschutz:</h2>
-
-    Bitte beachten Sie, dass es bei der Übertragung von Daten, wie z.B. E-Mails, über das Internet immer ein gewisses Sicherheitsrisiko gibt, da ein vollständiger Schutz vor unbefugtem Zugriff durch Dritte nicht möglich ist.
-
-    Wir übernehmen keine Haftung für Schäden, die aufgrund solcher Sicherheitsrisiken oder aufgrund von Unterlassungen unsererseits entstehen.
-</div>
+        <h2>Datenschutz:</h2>
+        Bitte beachten Sie, dass es bei der Übertragung von Daten, wie z.B. E-Mails, über das Internet immer ein
+        gewisses Sicherheitsrisiko gibt, da ein vollständiger Schutz vor unbefugtem Zugriff durch Dritte nicht möglich
+        ist.
+        Wir übernehmen keine Haftung für Schäden, die aufgrund solcher Sicherheitsrisiken oder aufgrund von
+        Unterlassungen unsererseits entstehen.
+    </div>
 </div>
 <footer>
     <a href="../html/AGB.html">AGB</a>
